--- a/data/po/sv.po
+++ b/data/po/sv.po
@@ -7,7 +7,7 @@
 # Johan R. <jreinhed@protonmail.com>, 2017
 # Johan R. <jreinhed@protonmail.com>, 2018
 # efef6ec5b435a041fce803c7f8af77d2_2341d43, 2020
-# efef6ec5b435a041fce803c7f8af77d2_2341d43, 2020-2021
+# Jonatan Nyberg <jonatan.nyberg.karl@gmail.com>, 2020-2021
 # Kjell Rilbe <kjell@rilbe.se>, 2016
 # Kristoffer Grundström <lovaren@gmail.com>, 2016
 # Luna Jernberg <bittin@cafe8bitar.se>, 2020
@@ -19,9 +19,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-28 11:08+0800\n"
-"PO-Revision-Date: 2021-01-28 03:34+0000\n"
-"Last-Translator: Benau\n"
+"POT-Creation-Date: 2021-02-06 09:59+0800\n"
+"PO-Revision-Date: 2021-02-06 08:23+0000\n"
+"Last-Translator: Jonatan Nyberg <jonatan.nyberg.karl@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/supertuxkart/supertuxkart/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -99,11 +99,11 @@ msgstr "Vinn mot minst 3 AI:er i normalt lopp, tidstest och följ ledaren."
 
 #. I18N: ./data/achievements.xml
 msgid "Powerup Love"
-msgstr "Krafthöjningskärlek"
+msgstr "Kraftförstärkningskärlek"
 
 #. I18N: ./data/achievements.xml
 msgid "Use 10 or more powerups in a race."
-msgstr "Använd 10 eller flera krafthöjningar i ett lopp."
+msgstr "Använd 10 eller flera kraftförstärkningar i ett lopp."
 
 #. I18N: ./data/achievements.xml
 msgid "Unstoppable"
@@ -143,7 +143,7 @@ msgstr "Ta dina motståndare för myggor! Med flugsmällan, mosa dem minst 5 gå
 
 #. I18N: ./data/achievements.xml
 msgid "Beyond Luck"
-msgstr "Utöver tur"
+msgstr "Bortom tur"
 
 #. I18N: ./data/achievements.xml
 msgid ""
@@ -401,11 +401,11 @@ msgstr "Bakåtkamera"
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
 msgid "Follow ball in soccer mode"
-msgstr ""
+msgstr "Följ bollen i fotbollsläge"
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 msgid "Reset"
-msgstr ""
+msgstr "Återställ"
 
 #. I18N: ./data/gui/dialogs/custom_video_settings.stkgui
 msgid "Graphics Settings"
@@ -1027,7 +1027,7 @@ msgstr "Installerad"
 #. I18N: ./data/gui/screens/easter_egg.stkgui
 #. I18N: track group
 #. I18N: In the UI options, Camera setting: Standard
-#: src/states_screens/dialogs/custom_camera_settings.cpp:66
+#: src/states_screens/dialogs/custom_camera_settings.cpp:67
 #: src/states_screens/grand_prix_editor_screen.cpp:335
 #: src/states_screens/options/options_screen_ui.cpp:162
 msgid "Standard"
@@ -1263,7 +1263,7 @@ msgstr "Spellägen"
 #. I18N: ./data/gui/screens/help7.stkgui
 #. I18N: Tab in help menu
 msgid "Powerups"
-msgstr "Krafthöjningar"
+msgstr "Kraftförstärkningar"
 
 #. I18N: ./data/gui/screens/help1.stkgui
 #. I18N: Tab in help menu
@@ -1342,7 +1342,7 @@ msgstr "Starta handledningen"
 #. I18N: ./data/gui/screens/help1.stkgui
 #. I18N: In the help menu
 msgid "Collect blue gift boxes, they will give you powerups."
-msgstr "Samla blåa presentlådor, de kommer ge dig krafthöjningar."
+msgstr "Samla blåa presentlådor, de kommer ge dig kraftförstärkningar."
 
 #. I18N: ./data/gui/screens/help1.stkgui
 #. I18N: In the help menu
@@ -1394,12 +1394,12 @@ msgstr "SuperTuxKart har flera spellägen:"
 #. I18N: In the help menu
 msgid ""
 "Regular Race: All blows allowed, so collect powerups and use them smartly!"
-msgstr "Vanligt lopp: Alla slag är tillåtna, så samla krafthöjningar och använd dem smart!"
+msgstr "Vanligt lopp: Alla slag är tillåtna, så samla kraftförstärkningar och använd dem smart!"
 
 #. I18N: ./data/gui/screens/help2.stkgui
 #. I18N: In the help menu
 msgid "Time Trial: Contains no powerups, so only your driving skills matter!"
-msgstr "Tidsförsök: Innehåller inga krafthöjningar, så det är bara din körförmåga som spelar roll!"
+msgstr "Tidsförsök: Innehåller inga kraftförstärkningar, så det är bara din körförmåga som spelar roll!"
 
 #. I18N: ./data/gui/screens/help2.stkgui
 #. I18N: In the help menu
@@ -1448,7 +1448,7 @@ msgstr "* Många av dessa spellägen kan också spelas på Grand Prix-sätt: ist
 #. I18N: ./data/gui/screens/help3.stkgui
 #. I18N: In the help menu
 msgid "To help you win, there are some powerups you can collect:"
-msgstr "För att du ska vinna lättare finns det krafthöjningar som du kan samla:"
+msgstr "För att du ska vinna lättare finns det kraftförstärkningar som du kan samla:"
 
 #. I18N: ./data/gui/screens/help3.stkgui
 msgid ""
@@ -1538,7 +1538,7 @@ msgid ""
 "completed. In the top-right of the screen, it also tells you how many points"
 " you currently have. Complete as many challenges as possible, and Nolok will"
 " accept to race against you. Win to liberate Gnu!"
-msgstr "Denna ikon på minikartan visar tillgängliga utmaningar som du inte har avslutat. Längst upp till höger på skärmen berättar den också hur många poäng du har för närvarande. Avsluta så många utmaningar som möjligt, så accepterar Nolok att tävla mot dig. Vinn för att befria Gnu!"
+msgstr "Denna ikon på minikartan visar tillgängliga utmaningar som du inte har slutfört. Längst upp till höger på skärmen berättar den också hur många poäng du har för närvarande. Slutför så många utmaningar som möjligt, så accepterar Nolok att tävla mot dig. Vinn för att befria Gnu!"
 
 #. I18N: ./data/gui/screens/help5.stkgui
 #. I18N: In the help menu
@@ -2185,7 +2185,7 @@ msgstr "Visa FPS"
 #. I18N: ./data/gui/screens/options_ui.stkgui
 #. I18N: In the ui settings
 msgid "Show other karts' held powerups"
-msgstr "Visa andra karters krafthöjningar"
+msgstr "Visa andra karters kraftförstärkningar"
 
 #. I18N: ./data/gui/screens/options_ui.stkgui
 #. I18N: In the ui settings
@@ -2205,7 +2205,7 @@ msgstr "Nivå för grafiska effekter"
 #. I18N: ./data/gui/screens/options_video.stkgui
 #. I18N: In the video settings
 msgid "Render resolution"
-msgstr ""
+msgstr "Rendera upplösning"
 
 #. I18N: ./data/gui/screens/options_video.stkgui
 #. I18N: In the video settings
@@ -2333,7 +2333,7 @@ msgstr "Skal för användargränssnittet kan ändras i alternativen för använd
 
 #. I18N: ./data/tips.xml
 msgid "You can see other karts' powerups by enabling it in the UI options."
-msgstr "Du kan se andra karters krafthöjningar genom att aktivera det i alternativen i användargränssnittet."
+msgstr "Du kan se andra karters kraftförstärkningar genom att aktivera det i alternativen i användargränssnittet."
 
 #. I18N: ./data/tips.xml
 msgid "The font size can be changed in the UI options."
@@ -2424,7 +2424,7 @@ msgstr "I fotboll, arbeta alltid som ett team för att nå bra resultat."
 msgid ""
 "If you miss the ball and an opponent is approaching, try hitting them with a"
 " powerup or block their way."
-msgstr "Om du saknar bollen och en motståndare närmar sig, försök att slå dem med en krafthöjning eller blockera deras väg."
+msgstr "Om du saknar bollen och en motståndare närmar sig, försök att slå dem med en kraftförstärkning eller blockera deras väg."
 
 #. I18N: ./data/tips.xml
 msgid "Good rotation of positions (attack and defense) is essential."
@@ -2790,12 +2790,12 @@ msgid "FPS: %d/%d/%d - %d KTris, Ping: %dms"
 msgstr "FPS: %d/%d/%d - %d KTris, Ping: %dms"
 
 #. I18N: Tip shown in gui for giving player hints
-#: src/guiengine/engine.cpp:1432 src/states_screens/race_result_gui.cpp:198
+#: src/guiengine/engine.cpp:1439 src/states_screens/race_result_gui.cpp:198
 #, c-format
 msgid "Tip: %s"
 msgstr "Tips: %s"
 
-#: src/guiengine/engine.cpp:1476
+#: src/guiengine/engine.cpp:1483
 msgid "Loading"
 msgstr "Läser in"
 
@@ -3431,14 +3431,19 @@ msgstr "Vänster trigger"
 msgid "Right trigger"
 msgstr "Höger trigger"
 
-#: src/input/input_manager.cpp:989
+#: src/input/input_manager.cpp:993
 #, c-format
 msgid "Ignoring '%s'. You needed to join earlier to play!"
 msgstr "Ignorerar \"%s\", du måste hoppa in tidigare för att spela!"
 
-#: src/input/input_manager.cpp:1026
+#: src/input/input_manager.cpp:1030
 msgid "Only the Game Master may act at this point!"
 msgstr "Endast spelägaren kan agera just nu!"
+
+#: src/input/sdl_controller.cpp:241
+#, c-format
+msgid "%s has low battery level."
+msgstr "%s har låg batterinivå."
 
 #: src/input/wiimote_manager.cpp:379
 msgid ""
@@ -3490,7 +3495,7 @@ msgstr "Du vann loppet!"
 #: src/karts/kart.cpp:1021
 #, c-format
 msgid "You finished the race in rank %d!"
-msgstr ""
+msgstr "Du avslutade loppet i rang %d!"
 
 #. I18N: Message shown in game to tell player left the game in network
 #: src/karts/kart_rewinder.cpp:126 src/network/protocols/client_lobby.cpp:1126
@@ -3822,7 +3827,7 @@ msgstr "Misslyckades upptäcka portnummer för servern %s."
 
 #: src/network/protocols/lobby_protocol.cpp:292
 msgid "Network grand prix has been finished."
-msgstr "Nätverkets Grand Prix har slutförts."
+msgstr "Nätverkets Grand Prix har avslutats."
 
 #: src/network/server_config.cpp:258
 msgid "Time Trial (Grand Prix)"
@@ -4245,7 +4250,7 @@ msgstr "Fritt-för-alla matcher avslutade"
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:234
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:236
 msgid "Powerups used"
-msgstr "Krafthöjningar använda"
+msgstr "Kraftförstärkningar använda"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
@@ -4511,14 +4516,14 @@ msgid ""
 msgstr "Upplösningar som är mindre än 1024x768 eller 1280x720 stöds inte. Vissa delar av användargränssnittet kanske inte fungerar korrekt."
 
 #. I18N: In the UI options, Camera setting: Drone chase
-#: src/states_screens/dialogs/custom_camera_settings.cpp:81
+#: src/states_screens/dialogs/custom_camera_settings.cpp:84
 #: src/states_screens/options/options_screen_ui.cpp:164
 msgid "Drone chase"
 msgstr "Dronejakt"
 
 #. I18N: In the UI options, Camera setting: Custom
 #. I18N: custom video settings
-#: src/states_screens/dialogs/custom_camera_settings.cpp:96
+#: src/states_screens/dialogs/custom_camera_settings.cpp:101
 #: src/states_screens/options/options_screen_ui.cpp:160
 #: src/states_screens/options/options_screen_video.cpp:529
 #: src/states_screens/options/options_screen_video.cpp:564
@@ -5796,64 +5801,64 @@ msgid "Do you really want to delete player '%s'?"
 msgstr "Vill du verkligen ta bort spelaren \"%s\"?"
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
-#: src/states_screens/race_gui_base.cpp:69
+#: src/states_screens/race_gui_base.cpp:70
 msgid "Ready!"
 msgstr "Klara!"
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
-#: src/states_screens/race_gui_base.cpp:71
+#: src/states_screens/race_gui_base.cpp:72
 msgid "Set!"
 msgstr "Färdiga!"
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
-#: src/states_screens/race_gui_base.cpp:73
+#: src/states_screens/race_gui_base.cpp:74
 msgid "Go!"
 msgstr "Kör!"
 
 #. I18N: Shown when a goal is scored
-#: src/states_screens/race_gui_base.cpp:75
+#: src/states_screens/race_gui_base.cpp:76
 msgid "GOAL!"
 msgstr "MÅL!"
 
 #. I18N: Shown waiting for other players in network to finish loading or
 #. waiting
-#: src/states_screens/race_gui_base.cpp:78
+#: src/states_screens/race_gui_base.cpp:79
 #: src/states_screens/race_result_gui.cpp:366
 msgid "Waiting for others"
 msgstr "Väntar på andra"
 
 #. I18N: Shown waiting for the server in network if live join or spectate
-#: src/states_screens/race_gui_base.cpp:80
+#: src/states_screens/race_gui_base.cpp:81
 msgid "Waiting for the server"
 msgstr "Väntar på servern"
 
 #. I18N: string used to show the song title (e.g. "Sunny Song")
-#: src/states_screens/race_gui_base.cpp:637
+#: src/states_screens/race_gui_base.cpp:638
 #, c-format
 msgid "\"%s\""
 msgstr "\"%s\""
 
 #. I18N: string used to show the author of the music. (e.g. "Sunny Song" by
 #. "John Doe")
-#: src/states_screens/race_gui_base.cpp:647
+#: src/states_screens/race_gui_base.cpp:648
 msgid "by"
 msgstr "av"
 
-#: src/states_screens/race_gui_base.cpp:755
+#: src/states_screens/race_gui_base.cpp:756
 msgid "Collect nitro!"
 msgstr "Samla Nitro!"
 
-#: src/states_screens/race_gui_base.cpp:757
+#: src/states_screens/race_gui_base.cpp:758
 msgid "Follow the leader!"
 msgstr "Följ ledaren!"
 
 #. I18N: When some GlobalPlayerIcons are hidden, write "Top 10" to show it
-#: src/states_screens/race_gui_base.cpp:940
+#: src/states_screens/race_gui_base.cpp:941
 #, c-format
 msgid "Top %i"
 msgstr "Topp %i"
 
-#: src/states_screens/race_gui.cpp:444
+#: src/states_screens/race_gui.cpp:445
 msgid "Challenge Failed"
 msgstr "Utmaningen misslyckades"
 
@@ -5966,7 +5971,7 @@ msgstr "Alla faror tillåtna, så plocka vapen och använd dem smart!"
 
 #: src/states_screens/race_setup_screen.cpp:95
 msgid "Contains no powerups, so only your driving skills matter!"
-msgstr "Innehåller inga krafthöjningar, endast dina körfärdigheter spelar roll!"
+msgstr "Innehåller inga kraftförstärkningar, endast dina körfärdigheter spelar roll!"
 
 #. I18N: short definition for follow-the-leader game mode
 #: src/states_screens/race_setup_screen.cpp:108
