--- a/data/po/he.po
+++ b/data/po/he.po
@@ -8,9 +8,9 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010
 # GenghisKhan <genghiskhan@gmx.ca>, 2015-2016
 # Liran <liranvaknin@gmail.com>, 2016-2017
-# Omer I.S. <omeritzicschwartz@gmail.com>, 2020-2021
-# Omer I.S. <omeritzicschwartz@gmail.com>, 2020
-# Omer I.S. <omeritzicschwartz@gmail.com>, 2020
+# Omeritzics Games <omeritzicschwartz@gmail.com>, 2020-2021
+# Omeritzics Games <omeritzicschwartz@gmail.com>, 2020
+# Omeritzics Games <omeritzicschwartz@gmail.com>, 2020
 # עומר רוזנר, 2018
 # Yaroslav Serhieiev <noomorph@gmail.com>, 2018
 # Yevgney Sliosarenko, 2015
@@ -21,8 +21,8 @@ msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-02-16 09:26+0800\n"
-"PO-Revision-Date: 2021-02-16 19:43+0000\n"
-"Last-Translator: Omer I.S. <omeritzicschwartz@gmail.com>\n"
+"PO-Revision-Date: 2021-02-25 20:41+0000\n"
+"Last-Translator: Omeritzics Games <omeritzicschwartz@gmail.com>\n"
 "Language-Team: Hebrew (http://www.transifex.com/supertuxkart/supertuxkart/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4586,7 +4586,7 @@ msgstr ""
 #: src/states_screens/options/options_screen_video.cpp:564
 #: src/states_screens/options/options_screen_video.cpp:592
 msgid "Custom"
-msgstr "מותאם"
+msgstr "מותאמת"
 
 #. I18N: Geometry level disabled : lowest level, no details
 #. I18N: in the graphical options tooltip;
