--- a/data/po/id.po
+++ b/data/po/id.po
@@ -12,14 +12,14 @@
 # Iwan Rahardi Putra <iwan.rahardi.putra@gmail.com>, 2017
 # Raja Sulaiman <wormsplaycheats@gmail.com>, 2017
 # Triyan W. Nugroho <triyan.wn@gmail.com>, 2020
-# ZAQraven Ai <ishaqalasyja@gmail.com>, 2020-2021
+# Ai_ZAQraven <ishaqalasyja@gmail.com>, 2020-2021
 msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-02-16 09:26+0800\n"
 "PO-Revision-Date: 2021-02-17 13:02+0000\n"
-"Last-Translator: ZAQraven Ai <ishaqalasyja@gmail.com>\n"
+"Last-Translator: Ai_ZAQraven <ishaqalasyja@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/supertuxkart/supertuxkart/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
