--- a/data/po/sr.po
+++ b/data/po/sr.po
@@ -10,7 +10,7 @@
 # SUABNINISAN alalalala <sinisaisepicbutpleasemorealts@gmail.com>, 2020
 # SUABNINISAN alalalala <sinisaisepicbutpleasemorealts@gmail.com>, 2020
 # Мирослав Николић <miroslavnikolic@rocketmail.com>, 2011
-# Саша Петровић <salepetronije@gmail.com>, 2012-2014,2016,2018,2020
+# Саша Петровић <salepetronije@gmail.com>, 2012-2014,2016,2018,2020-2021
 # Саша Петровић <salepetronije@gmail.com>, 2015-2016
 # Саша Петровић <salepetronije@gmail.com>, 2016
 # Саша Петровић <salepetronije@gmail.com>, 2016-2017
@@ -21,8 +21,8 @@ msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-02-16 09:26+0800\n"
-"PO-Revision-Date: 2021-02-16 04:15+0000\n"
-"Last-Translator: Transifex Bot <>\n"
+"PO-Revision-Date: 2021-03-05 06:36+0000\n"
+"Last-Translator: Саша Петровић <salepetronije@gmail.com>\n"
 "Language-Team: Serbian (http://www.transifex.com/supertuxkart/supertuxkart/language/sr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -415,12 +415,12 @@ msgstr "Задња камера"
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
 msgid "Follow ball in soccer mode"
-msgstr ""
+msgstr "Прати лопту у игри ногомета"
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
 msgid "Reset"
-msgstr ""
+msgstr "Врати на подразумевано"
 
 #. I18N: ./data/gui/dialogs/custom_video_settings.stkgui
 msgid "Graphics Settings"
@@ -5152,7 +5152,7 @@ msgstr "Завршили сте велику трку!"
 #: src/states_screens/high_score_selection.cpp:134
 msgctxt "column_name"
 msgid "Number of karts"
-msgstr ""
+msgstr "Број колица"
 
 #: src/states_screens/high_score_selection.cpp:267
 msgid "Are you sure you want to remove this high score entry?"
@@ -5215,7 +5215,7 @@ msgstr "Молим сачекајте док се не учитају додац
 
 #: src/states_screens/main_menu_screen.cpp:654
 msgid "Are you sure you want to quit STK?"
-msgstr ""
+msgstr "Да ли сигурно желите да напустите СТК?"
 
 #: src/states_screens/online/create_server_screen.cpp:96
 msgid "Create LAN Server"
