Update translation source

--- a/data/po/bs.po
+++ b/data/po/bs.po
@@ -6397,4 +6397,4 @@ msgstr ""
 
 #: src/states_screens/credits.cpp:209
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nSiddhartha Gautama, 2016-2018\nSiddhartha Gautama, 2018\n"
+msgstr "Launchpad Contributions:\nSiddhartha Gautama, 2016-2018\nSiddhartha Gautama, 2018"
