--- a/data/po/ko.po
+++ b/data/po/ko.po
@@ -5498,6 +5498,10 @@ msgid "Online username must not start with a number!"
 msgstr "온라인 사용자 이름은 숫자로 시작해서는 안됩니다!"
 
 #: src/states_screens/online/register_screen.cpp:366
+msgid "Your username can only contain alphanumeric characters, periods, dasges and underscores"
+msgstr "영문자, 숫자, ., -, _만 입력해주세요"
+
+#: src/states_screens/online/register_screen.cpp:366
 msgid "Email has to be between 5 and 254 characters long!"
 msgstr "이메일의 길이는 5자부터 254자까지 사이여야 합니다!"
 
@@ -6137,8 +6141,8 @@ msgstr "최고 점수"
 
 #: src/states_screens/race_result_gui.cpp:1910
 #, c-format
-msgid "Best lap time: %s"
-msgstr "최단 바퀴 시간: %s"
+msgid "Best lap timeAAAA: %s"
+msgstr "최단 바퀴 시간asdasd: %s"
 
 #. I18N: is used to indicate who has the bast laptime (best laptime "by
 #. kart_name")
