--- a/data/po/en.po
+++ b/data/po/en.po
@@ -2138,6 +2138,11 @@ msgstr "Internet options"
 
 #. I18N: ./data/gui/screens/options_general.stkgui
 #. I18N: In the general settings
+msgid "Display flags"
+msgstr "Display flags"
+
+#. I18N: ./data/gui/screens/options_general.stkgui
+#. I18N: In the general settings
 msgid "Always show login screen"
 msgstr "Always show login screen"
 
